--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,178 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
+:root {
+  --primary: #0C2A42;
+  --secondary: #D3AC92;
+  --tertiary: whitesmoke;
+}
+
+.app {
+  background-color: var(--primary);
+  color: var(--tertiary);
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  min-width: 100%;
+}
+
+a {
+  color: var(--tertiary);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--secondary);
+  cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 3rem;
+  line-height: 3rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+button {
+  background-color: var(--secondary) !important;
+}
+
+button:hover {
+  filter: brightness(90%);
+}
+
+.section-title {
+  position: sticky;
+  top: 0;
+  background-color: rgba(12, 42, 66, 0.5);
+  backdrop-filter: blur(8px);
+  padding: 1rem 1rem 1rem 0;
+  z-index: 20;
+  color: var(--secondary);
+}
+
+.accent {
+  color: var(--secondary);
+}
+
+.project-logo {
+  border: 2px solid rgba(211, 172, 146, 0.5);
+  border-radius: 6px;
+  object-fit: cover;
+}
+
+.project-tag {
+  background: var(--secondary) !important;
+}
+
+.about-portrait {
+  border: 10px solid var(--secondary);
+  border-radius: 15px;
+  margin: auto;
+  box-shadow: 10px 10px 5px grey;
+  width: 200px;
+  height: 250px;
+  position: relative;
+}
+
+.about-portrait-content {
+  padding: 5px;
+  object-fit: cover;
+  position: absolute;
+  cursor: pointer;
+}
+
+.about-portrait-content.avatar {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.about-portrait-content.myself {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.about-portrait-content:hover.avatar {
+  opacity: 0;
+}
+
+.about-portrait-content:hover.myself {
+  opacity: 1;
+}
+
+.frame-square {
+  border: 10px solid var(--secondary);
+  border-radius: 15px;
+  margin: auto;
+  box-shadow: 10px 10px 5px grey;
+  width: 200px;
+  height: 200px;
+  position: relative;
+}
+
+.frame-square img {
+  padding: 5px;
+  object-fit: cover;
+  position: absolute;
+}
+
+.frame-plaque {
   padding: 2rem;
+  background-color: var(--secondary);
+  color: var(--primary);
   text-align: center;
+  border-radius: 6px 6px 0 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.carousel {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carousel-element {
+  max-width: 500px;
+  max-height: auto;
+  border-radius: 6px;
+  margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.carousel-navigation {
+  position: absolute;
+  padding: 1rem;
+  background-color: var(--secondary);
+  cursor: pointer;
 }
 
-.card {
-  padding: 2em;
+.carousel-navigation--right {
+  right: 0;
 }
 
-.read-the-docs {
-  color: #888;
+.carousel-navigation--left {
+  left: 0;
+}
+
+.carousel-circle {
+  cursor: pointer;
+  background-color: var(--secondary);
+}
+
+.carousel-circle--active {
+  background-color: var(--primary);
 }
