--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Whisper&display=swap');
+
 :root {
   --primary: #0C2A42;
   --secondary: #D3AC92;
   --tertiary: whitesmoke;
 }
 
+body {
+  font-family: 'Lato', sans-serif !important;
+  font-size: 20px !important;
+}
+
+.header-name {
+  font-family: 'Whisper', cursive;
+}
+
 .app {
-  background-color: var(--primary);
-  color: var(--tertiary);
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
   min-height: 100vh;
   min-width: 100%;
+
+  display: grid;
+  grid-template-columns: 60px 1fr;
+
+  background-color: var(--primary);
+  color: var(--tertiary);
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .app {
+    grid-template-columns: 1fr;
+  }
 }
 
 a {
@@ -20,6 +42,7 @@ a {
 }
 
 a:hover {
+  text-decoration: none !important;
   color: var(--secondary);
   cursor: pointer;
 }
@@ -36,9 +59,9 @@ p {
 }
 
 h1 {
-  font-size: 3rem;
-  line-height: 3rem;
-  font-weight: 700;
+  font-size: 4rem;
+  line-height: 4rem;
+  font-weight: 400;
   margin: 0;
 }
 
@@ -57,6 +80,11 @@ button:hover {
   filter: brightness(90%);
 }
 
+.main-container {
+  max-width: 1280px;
+  margin: auto;
+}
+
 .section-title {
   position: sticky;
   top: 0;
@@ -65,114 +93,27 @@ button:hover {
   padding: 1rem 1rem 1rem 0;
   z-index: 20;
   color: var(--secondary);
+  text-transform: uppercase;
+  font-size: 1.5rem;
+}
+
+.link-icon {
+  transition: transform 0.5s ease-in-out;
+}
+
+a:hover .link-icon {
+  transform: scale(1.2) rotate(360deg);
+}
+
+.subtitle {
+  font-style: italic;
 }
 
 .accent {
   color: var(--secondary);
 }
 
-.project-logo {
-  border: 2px solid rgba(211, 172, 146, 0.5);
-  border-radius: 6px;
-  object-fit: cover;
-}
-
-.project-tag {
-  background: var(--secondary) !important;
-}
-
-.about-portrait {
-  border: 10px solid var(--secondary);
-  border-radius: 15px;
-  margin: auto;
-  box-shadow: 10px 10px 5px grey;
-  width: 200px;
-  height: 250px;
-  position: relative;
-}
-
-.about-portrait-content {
-  padding: 5px;
-  object-fit: cover;
-  position: absolute;
-  cursor: pointer;
-}
-
-.about-portrait-content.avatar {
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.about-portrait-content.myself {
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.about-portrait-content:hover.avatar {
-  opacity: 0;
-}
-
-.about-portrait-content:hover.myself {
-  opacity: 1;
-}
-
-.frame-square {
-  border: 10px solid var(--secondary);
-  border-radius: 15px;
-  margin: auto;
-  box-shadow: 10px 10px 5px grey;
-  width: 200px;
-  height: 200px;
-  position: relative;
-}
-
-.frame-square img {
-  padding: 5px;
-  object-fit: cover;
-  position: absolute;
-}
-
-.frame-plaque {
-  padding: 2rem;
-  background-color: var(--secondary);
-  color: var(--primary);
-  text-align: center;
-  border-radius: 6px 6px 0 0;
-}
-
-.carousel {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.carousel-element {
-  max-width: 500px;
-  max-height: auto;
-  border-radius: 6px;
-  margin: auto;
-}
-
-.carousel-navigation {
-  position: absolute;
-  padding: 1rem;
-  background-color: var(--secondary);
-  cursor: pointer;
-}
-
-.carousel-navigation--right {
-  right: 0;
-}
-
-.carousel-navigation--left {
-  left: 0;
-}
-
-.carousel-circle {
-  cursor: pointer;
-  background-color: var(--secondary);
-}
-
-.carousel-circle--active {
-  background-color: var(--primary);
+.custom-tag {
+  background-color: var(--secondary) !important;
+  font-size: 16px !important;
 }
