--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -4,7 +4,16 @@
     position: relative;
 }
 
+.carousel-container {
+    height: 500px;
+    display: grid;
+    grid-template-columns: 50px 1fr 50px;
+    align-items: center;
+    gap: 10px;
+}
+
 .carousel-element {
+    width: 100%;
     max-width: 500px;
     height: auto;
     border-radius: 6px;
@@ -13,10 +22,11 @@
 }
 
 .carousel-navigation {
-    position: absolute;
     padding: 1rem;
     background-color: var(--secondary);
     cursor: pointer;
+    height: fit-content;
+    width: fit-content;
 }
 
 .carousel-navigation--right {
